--- a/opmaak.css
+++ b/opmaak.css
@@ -9,3 +9,9 @@ h1 {
     color: gold; 
     text-decoration: none; 
   }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
