--- a/opmaak.css
+++ b/opmaak.css
@@ -13,7 +13,7 @@ h1 {
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: #333;
+      background-color: white;
     }
     
     li {
@@ -22,7 +22,7 @@ h1 {
     
     li a {
       display: block;
-      color: white;
+      color: gold;
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
@@ -30,5 +30,5 @@ h1 {
     
    
     li a:hover {
-      background-color: #111;
+      background-color: white;
     }
