--- a/opmaak.css
+++ b/opmaak.css
@@ -13,7 +13,7 @@ h1 {
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: white;
+      background-color: black;
     }
     
     li {
@@ -30,5 +30,5 @@ h1 {
     
    
     li a:hover {
-      background-color: white;
+      background-color: black;
     }
