--- a/opmaak.css
+++ b/opmaak.css
@@ -7,7 +7,7 @@ h1 {
   }
   a {
     color: gold; 
-    text-decoration: none;} 
+    text-decoration: wavy;} 
     ul {
       list-style-type: none;
       margin: 0;
