--- a/opmaak.css
+++ b/opmaak.css
@@ -32,3 +32,13 @@ h1 {
     li a:hover {
       background-color: black;
     }
+    div {
+      width: 100px;
+      height: 100px;
+      background: red;
+      transition: width 2s;
+    }
+    
+    div:hover {
+      width: 300px;
+    }
