--- a/opmaak.css
+++ b/opmaak.css
@@ -13,7 +13,7 @@ h1 {
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: orchid;
+      background-color: beige;
     }
     
     li {
